--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,11 +11,15 @@
 
 <body>
     <nav id="navbar">
+        <h2>Node Todo</h2>
         <ul>
-            <li><a href="/">Ver todas</a></li>
+            <li><a href="/tasks">Ver todas</a></li>
+            <li><a href="/tasks/add">Criar</a></li>
         </ul>
     </nav>
-    {{{ body }}}
+    <div class="container">
+        {{{ body }}}
+    </div>
 </body>
 
 </html>
